--- a/pylama.ini
+++ b/pylama.ini
@@ -1,4 +1,4 @@
 [pylama]
 linters=mccabe,pyflakes,pylint,isort,mypy
-ignore=C0116,R0201,R0903,R0913
+ignore=C0116,R0201,R0903,R0913,C0301
 skip=build/*,tests/*,simplebot_*/orm.py
